--- a/assets/css/site/_2.6-section--team.scss
+++ b/assets/css/site/_2.6-section--team.scss
@@ -43,9 +43,9 @@
             margin-bottom: $baseline;
             
             .pic { width: 50%; margin: 0 auto; border-radius: 100%; margin-bottom: $baseline-small; }
-            .team-text { margin: 0; text-align: center; color: $white; }
-            h3 { font-size: $normal; }
-            h4 { font-size: $small; }
+            .team-text { margin: 0; text-align: center; }
+            h3 { font-size: $normal; color: $kd-mauve; }
+            h4 { font-size: $small; color: $white; }
             
             .pic-hover { @include position(absolute, 0); transform: translateX(-100%); }
             
