--- a/assets/css/site/_2.6-section--team.scss
+++ b/assets/css/site/_2.6-section--team.scss
@@ -60,7 +60,7 @@
     .team-carousel {
         
         width: 60%;
-        margin-top: $baseline-large;
+        margin: $baseline-large auto;
         
     }
 
