--- a/assets/css/site/_1.4-object--carousel.scss
+++ b/assets/css/site/_1.4-object--carousel.scss
@@ -72,7 +72,7 @@
 
             position: relative;
 
-            .carousel-pic { z-index: 0;
+            .carousel-pic { z-index: 0; overflow: hidden;
 
                 .image { @include position (absolute, 0); }
 
@@ -217,5 +217,24 @@
 }
 
 // E. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+// F. CUSTOM QUERIES +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+@media(min-width:1281px) {
+
+    // A.1.2. Carousel
+
+    .home-carousel { 
+        ul { 
+            li { 
+                .carousel-pic { @include aspect-ratio (100%, 41%); margin: 0; }
+            }
+        }
+    }
+
+    // A.1.2. END  
+}
+
+// F. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 // END OF FILE ########################################################################################################
