modals/staff updates

--- a/assets/css/site/_2.1-section--masthead.scss
+++ b/assets/css/site/_2.1-section--masthead.scss
@@ -15,7 +15,7 @@
 
     .logo-small { display: none; }
     
-    .logo { width: 300px; margin: $baseline-small; }
+    .logo { width: 300px; margin: $baseline-small; display: inline-block; }
 
     .nav-main {
         
