--- a/assets/css/site/_1.6-object--modals.scss
+++ b/assets/css/site/_1.6-object--modals.scss
@@ -209,7 +209,7 @@
     h2 { font-size: $medium; }
     h3 { font-size: $normal; }
     
-    .copy { width: 40%; margin: $baseline-small auto; p { font-size: 1.4vh; }}
+    .copy { width: 40%; margin: $baseline-small auto; p { font-size: 2.0vh; line-height: 4vh; }}
     
     // A.1.6. END
 }
@@ -239,7 +239,7 @@
     h2 { font-size: $medium; }
     h3 { font-size: $normal; }
     
-    .copy { width: 40%; margin: $baseline-small auto; p { font-size: 1.6vh; }}
+    .copy { width: 40%; margin: $baseline-small auto; p { font-size: 2.2vh; line-height: 4vh; }}
     
     // A.1.6. END
 }
